endpoint to increase worker nodes

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "fs": "latest",
         "uuid": "latest",
         "path": "latest",
-        "amqplib": "latest"
+        "amqplib": "latest",
+        "dockerode": "latest"
     }
 }
