--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,7 +11,9 @@
     "@emotion/styled": "latest",
     "@mui/material": "latest",
     "react": "latest",
-    "react-dom": "latest"
+    "react-dom": "latest",
+    "@mui/icons-material": "latest", 
+    "@mui/x-charts": "latest"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "latest",
