have backend read worker state from redis

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
         "path": "latest",
         "amqplib": "latest",
         "dockerode": "latest",
-        "cors": "latest"
+        "cors": "latest",
+        "redis": "latest"
     }
 }
